<resources>
    <string name="app_name">BrodyBeans2</string>
    <string name="signin">Sign In</string>
    <string name="username">username</string>
    <string name="pswd">password</string>
    <string name="espresso">Espresso</string>
    <string name="nEspresso">Non Espresso</string>
    <string name="bBeverages">Blended Beverages</string>
    <string name="breakfast">Breakfast</string>
    <string name="other">other</string>
    <string name="signout">Sign Out</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="new_order" translatable="false">New Order:</string>
    <string name="menu">Menu</string>
    <string name="espresso_text">Espresso</string>
    <string name="nonespresso_btn">Non Espresso</string>
    <string name="blendedBev_btn">Blended Beverage</string>
    <string name="breakfast_btn">Breakfast</string>
    <string name="other_btn">Other</string>
    <string name="plus">+</string>
    <string name="welcome_user">Welcome, user!</string>
    <string name="add_item">Add Item</string>
    <string name="your_order">Your current order:</string>
    <string name="place_order">Place Order</string>
    <string name="favorites">Favorites</string>
    <string name="line1">Line 1</string>
    <string name="moreInfo">></string>
    <string name="noimagefound">X to delete image</string>
    <string name="brodybeanimage">no logo source found</string>
    <string name="thanks">Thank you!</string>
    <string name="order_placed">Your order has been placed</string>
    <string name="order_msg">Your order number:</string>
    <string name="order_num">0</string>
    <string name="settings">Settings</string>
    <string name="allow_notifs">Allow notifications?</string>
    <string name="settings_username_title">Edit username:</string>
    <string name="settings_pswd_title">Edit password:</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_pswd">Update Password</string>
    <string name="update_name">Update Name</string>
    <string name="in_prog">In Progress</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notify_msg">Your order is being prepared!</string>
</resources>
