<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:baselineAligned="false"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="75"
            android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/itemTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="12dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="8dp"
                    android:text="@string/line1"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="28sp"
                    android:layout_marginTop="10dp"/>

</LinearLayout>


        <TextView
            android:id="@+id/more_info"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            android:text="@string/moreInfo"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="10dp"
            android:contentDescription="@string/noimagefound"
            app:srcCompat="@android:drawable/presence_offline" />



</LinearLayout>

