<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#271509"
    tools:context=".OrdersActivity">

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F44336"
        android:text="Cancel Order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/thanks_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/thanks"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/order_placed_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/order_placed"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/order_num_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/order_msg"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/order_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/order_num"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="100sp" />

        <ListView
            android:id="@+id/more_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_num" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
