<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#271509"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/new_order_btn"
        android:layout_width="106dp"
        android:layout_height="99dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="83dp"
        android:background="#DFA127"
        android:text="@string/plus"
        android:textSize="75sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_order_text" />

    <TextView
        android:id="@+id/new_order_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="83dp"
        android:text="@string/new_order"
        android:textColor="#DFA127"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="83dp"
        android:text="@string/welcome_user"
        android:textColor="@color/colorAccent"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>