<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#271509"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <TextView
            android:id="@+id/notifications_txt"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/allow_notifs"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/button_selector"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <TextView
        android:id="@+id/settings_username_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/settings_username_title"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="370dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:theme="@style/EditTextTheme"
        android:transitionName="phone_number_tran">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/happy_monkey"
            android:textColor="@color/colorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/settings_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/settings_pswd_title"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/update_pswd_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Current password is required for verification"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cur_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="370dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:theme="@style/EditTextTheme"
        android:transitionName="phone_number_tran">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/happy_monkey"
            android:hint="Current password"
            android:textColor="@color/colorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="370dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:theme="@style/EditTextTheme"
        android:transitionName="phone_number_tran">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/happy_monkey"
            android:hint="New password"
            android:textColor="@color/colorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/change_pswd_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="110dp"
        android:background="@color/colorAccent"
        android:text="@string/update_pswd"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

</LinearLayout>