<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#271509"
    tools:context=".signupActivity">

    <TextView
        android:id="@+id/signUpLAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <EditText
        android:id="@+id/JHED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpLAB" />

    <EditText
        android:id="@+id/passwordTXT"
        android:layout_width="181dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/pswd"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/signOutBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JHED"
        app:layout_constraintVertical_bias="0.309" />

    <EditText
        android:id="@+id/confirmPasswordTXT"
        android:layout_width="181dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/pswd"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/signOutBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JHED"
        app:layout_constraintVertical_bias="0.576" />

    <Button
        android:id="@+id/signOutBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="@color/colorAccent"
        android:text="Sign Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logoIMG"
        android:layout_width="221dp"
        android:layout_height="210dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/beans_logo_foreground" />

    <EditText
        android:id="@+id/usernameTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/passwordTXT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JHED" />

</androidx.constraintlayout.widget.ConstraintLayout>